tests/single_instruction_translation_validation/mcsema/register-variants/vpsrlq_ymm_ymm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:211:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %7) #22
            ^
0.03user 0.00system 0:00.03elapsed 108%CPU (0avgtext+0avgdata 27732maxresident)k
0inputs+16outputs (0major+3236minor)pagefaults 0swaps
